Added stylesheet and robots meta

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <head>
 
         <title>iages</title>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="robots" content="noindex, nofollow">
+
+        <link href="style.css" rel="stylesheet">
 
     </head>
 
