--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" class="f4">
 
     <head>
 
@@ -12,11 +12,181 @@
 
         <link href="style.css" rel="stylesheet">
 
+        <style>
+            .c-sans {
+                font-family: skolar-sans-latin,-apple-system,BlinkMacSystemFont,"segoe ui","helvetica neue",helvetica,ubuntu,roboto,noto,sans-serif;
+            }
+            .c-mw {
+                max-width: 40em;
+            }
+            .c-hyphens {
+                -webkit-hyphens: auto;
+                -moz-hyphens: auto;
+                hyphens: auto;
+            }
+        </style>
+
     </head>
 
-    <body>
+    <body class="c-sans ma0 pa0 bg-white dark-gray lh-copy">
 
-        <p>The iages website</p>
+        <article>
+
+            <header class="pa2 pv3 pa4-ns pv5-ns">
+
+                <h1 class="fw3 mt0 f4 ttu tracked lh-title tc">IAGES</h1>
+
+                <div class="c-mw center">
+
+                    <p class="tc b f3 f2-ns c-hyphens">Introducing the IAGES project (Information, Advice, Guidance and Emotional Support), a new mental health resource for Suffolk.</p>
+
+                    <p class="tc"><a href="#contact" class="db di-ns mb3 mb0-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Contact us</a> <a href="#contact" class="db di-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Implementation phase info (PDF)</a></p>
+
+                </div>
+
+            </header>
+
+            <section class="pa2 pv3 pa4-ns pv5-ns bg-lightest-blue bt b--light-gray">
+
+                <div class="measure center">
+
+                    <h2 class="mt0 f5 ttu tracked lh-title tc">About</h1>
+
+                    <p>IAGES is a partnership between <strong>Suffolk Libraries</strong>, <strong>Suffolk Family Carers</strong> and <strong>Suffolk Mind</strong>. Each partner is responsible for delivering its own core part of the service and are dedicated to working towards making information and support more visible and to help people better understand their wellbeing.</p>
+
+                    <p>The partnership has been funded by the <strong>Mental Health Pooled Fund from Suffolk’s Clinical Commissioning Groups and Suffolk County Council</strong>.</p>
+
+                </div>
+
+            </section>
+
+            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray">
+
+                <div class="c-mw center">
+
+                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://www.suffolklibraries.co.uk/health/" class="dark-blue no-underline hover-dark-red">New Chapters</a></h2>
+
+                    <div class="dt-l w-100-l">
+
+                        <div class="dtc-l w-third-l v-top pr3-l">
+
+                            <p class="tc"><img src="images/new-chapters-logo.png" alt="New Chapters"></p>
+
+                        </div>
+
+                        <div class="dtc-l w-two-thirds-l v-top pl3-l">
+
+                            <p>New Chapters is the Suffolk Libraries Mental Health and Wellbeing Information Service. Its aim is to provide information on local services and to promote events in libraries and the community that can support mental health and wellbeing.</p>
+
+                            <p>Suffolk Libraries will also increase access to information and signposting across the county, using its buildings, staff and resources; this will include increasing access to books on wellbeing topics, large print and audio books, as well as it’s display areas.</p>
+
+                            </p>The Open Space group (a drop-in session run with the local mental health trust NSFT and Julian Support) will be rolled out across the county in the main libraries. Libraries will also hold regular information events working in partnership with local community organisations and staff will receive training in mental health awareness to help support them in signposting customers.</p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
+            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray bg-lightest-blue">
+
+                <div class="c-mw center">
+
+                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://suffolkfamilycarers.org/" class="dark-blue no-underline hover-dark-red">Suffolk Family Carers</a></h2>
+
+                    <div class="dt-l w-100-l">
+
+                        <div class="dtc-l w-third-l v-top pr3-l">
+
+                            <p class="tc"><img src="images/suffolk-family-carers.png" alt="Suffolk Family Carers"></p>
+
+                        </div>
+
+                        <div class="dtc-l w-two-thirds-l v-top pl3-l">
+
+                            <p>Suffolk Family Carers provides information, advice and support to thousands of family carers. Their credible representation of family carers’ needs and valued work in supporting family carers enables them to campaign on issues that affect family carers to ensure their voice is heard.
+
+                            <p>Suffolk Family Carers have two dedicated IAGES workers, who cover the county and are responsible for signposting carers and can provide 1:1 sessions for advice and emotional support.</p>
+
+                            <p>The IAGES workers will also support the development and facilitation of Family Carers Open Space groups, which will run with a similar structure to Open Space and be hosted in various community venues.</p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
+            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray">
+
+                <div class="c-mw center">
+
+                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="http://www.suffolkmind.org.uk " class="dark-blue no-underline hover-dark-red">Suffolk Mind</a></h2>
+
+                    <div class="dt-l w-100-l">
+
+                        <div class="dtc-l w-third-l v-top pr3-l">
+
+                            <p class="tc"><img src="images/suffolkmind_orig.png" alt="Suffolk Mind"></p>
+
+                        </div>
+
+                        <div class="dtc-l w-two-thirds-l v-top pl3-l">
+
+                            <p>Suffolk Mind is affiliated to the national charity Mind, and is known as a local Mind, delivering services to reflect the needs of people in Suffolk. Suffolk Mind is committed to improving the lives of people with mental health issues.</p>
+
+                            <p>Suffolk Mind will be recruiting Peer Mentor Volunteers, who will be provided with training, supervision and managed by a volunteer coordinator within the organisation.</p>
+
+                            <p>The volunteers will support the development of peer groups, as well as the Family Carer/ Open Space groups within the community and will work with partnership organisations to support signposting and information.</p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
+            <section class="pa2 pv3 pa4-ns pv5-ns bg-lightest-blue bt b--light-gray">
+
+                <div class="measure center">
+
+                    <h2 class="mt0 f5 ttu tracked lh-title tc">Background</h1>
+
+                    <p>During the first six-months of the project, the partnership worked through an implementation phase to help insure the new service would be built with feedback and input from a wide variety of people. The implementation phase consisted of the following:</p>
+
+                    <ul>
+
+                        <li>Raising awareness of the new partnership and its aims</li>
+                        <li>Gathering feedback from service users, staff and anyone interested in wellbeing to help shape the new service</li>
+                        <li>Developing, improving and gathering feedback about our existing services</li>
+                        <li>Establishing our next steps</li>
+
+                    </ul>
+
+                    <p>For further information about what IAGES have done so far, please see the Implementation Phase Summary (PDF) (a more detailed evaluation report will be released in the near future) and the partnership will be launching a new website, designed on feedback gathered.</p>
+
+                    <p>If you have any questions in the meantime, please complete the contact form and someone will get back to you.</p>
+
+                </div>
+
+            </section>
+
+        </article>
+
+        <script>
+        (function(d) {
+        var config = {
+          kitId: 'phk8vgh',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+        })(document);
+        </script>
 
     </body>
 
