--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
 
         <article>
 
-            <header class="pa2 pv3 pa4-ns pv5-ns">
+            <header class="pa2 pv3 pa4-ns pv5-ns bg-gold">
 
-                <h1 class="fw3 mt0 f4 ttu tracked lh-title tc">IAGES</h1>
+                <h1 class="normal mt0 f4 ttu tracked lh-title tc">IAGES</h1>
 
                 <div class="c-mw center">
 
                     <p class="tc b f3 f2-ns c-hyphens">Introducing the IAGES project (Information, Advice, Guidance and Emotional Support), a new mental health resource for Suffolk.</p>
 
-                    <p class="tc"><a href="#contact" class="db di-ns mb3 mb0-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Contact us</a> <a href="#contact" class="db di-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Implementation phase info (PDF)</a></p>
+                    <p class="tc"><a href="#contact" class="b--washed-yellow db di-ns mb3 mb0-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Contact us</a> <a href="#contact" class="b--washed-yellow db di-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Implementation phase info (PDF)</a></p>
 
                 </div>
 
             </header>
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bg-lightest-blue bt b--light-gray">
+            <section class="pa2 pv3 pa4-ns pv5-ns bg-near-black light-gray bt b--light-gray">
 
                 <div class="measure center">
 
