--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <article>
 
-            <header class="pa2 pv3 pa4-ns pv5-ns bg-gold">
+            <header class="pa2 pv3 pa4-ns pv5-ns bg-lightest-blue">
 
                 <h1 class="normal mt0 f4 ttu tracked lh-title tc">IAGES</h1>
 
@@ -46,7 +46,7 @@
 
             </header>
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bg-near-black light-gray bt b--light-gray">
+            <section class="pa2 pv3 pa4-ns pv5-ns bg-white bt b--light-gray">
 
                 <div class="measure center">
 
@@ -60,7 +60,7 @@
 
             </section>
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray">
+            <section class="pa2 pv3 pa4-ns pv5-ns bt bg-lightest-blue b--light-gray">
 
                 <div class="c-mw center">
 
@@ -90,7 +90,7 @@
 
             </section>
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray bg-lightest-blue">
+            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray">
 
                 <div class="c-mw center">
 
@@ -120,7 +120,7 @@
 
             </section>
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray">
+            <section class="pa2 pv3 pa4-ns pv5-ns bt bg-lightest-blue b--light-gray">
 
                 <div class="c-mw center">
 
@@ -150,7 +150,7 @@
 
             </section>
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bg-lightest-blue bt b--light-gray">
+            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray">
 
                 <div class="measure center">
 
