--- a/index.html
+++ b/index.html
@@ -24,21 +24,24 @@
                 -moz-hyphens: auto;
                 hyphens: auto;
             }
+            .c-scroll {
+                scroll-behavior: smooth;
+            }
         </style>
 
     </head>
 
-    <body class="c-sans ma0 pa0 bg-white dark-gray lh-copy">
+    <body class="c-sans ma0 pa0 bg-white dark-gray lh-copy c-scroll">
 
         <article>
 
-            <header class="pa2 pv3 pa4-ns pv5-ns bg-lightest-blue">
+            <header class="pa2 pb3 pa4-ns pb5-ns bg-lightest-blue">
 
-                <h1 class="normal mt0 f4 ttu tracked lh-title tc">IAGES</h1>
+                <h1 class="normal mt0 f5 f4-ns ttu tracked lh-title tc">IAGES</h1>
 
                 <div class="c-mw center">
 
-                    <p class="tc b f3 f2-ns c-hyphens">Introducing the IAGES project (Information, Advice, Guidance and Emotional Support), a new mental health resource for Suffolk.</p>
+                    <p class="tc b f4 f2-ns c-hyphens">Introducing the IAGES project (Information, Advice, Guidance and Emotional Support), a new mental health resource for Suffolk.</p>
 
                     <p class="tc"><a href="#contact" class="b--washed-yellow db di-ns mb3 mb0-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Contact us</a> <a href="#contact" class="b--washed-yellow db di-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Implementation phase info (PDF)</a></p>
 
@@ -94,36 +97,6 @@
 
                 <div class="c-mw center">
 
-                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://suffolkfamilycarers.org/" class="dark-blue no-underline hover-dark-red">Suffolk Family Carers</a></h2>
-
-                    <div class="dt-l w-100-l">
-
-                        <div class="dtc-l w-third-l v-top pr3-l">
-
-                            <p class="tc"><img src="images/suffolk-family-carers.png" alt="Suffolk Family Carers"></p>
-
-                        </div>
-
-                        <div class="dtc-l w-two-thirds-l v-top pl3-l">
-
-                            <p>Suffolk Family Carers provides information, advice and support to thousands of family carers. Their credible representation of family carers’ needs and valued work in supporting family carers enables them to campaign on issues that affect family carers to ensure their voice is heard.
-
-                            <p>Suffolk Family Carers have two dedicated IAGES workers, who cover the county and are responsible for signposting carers and can provide 1:1 sessions for advice and emotional support.</p>
-
-                            <p>The IAGES workers will also support the development and facilitation of Family Carers Open Space groups, which will run with a similar structure to Open Space and be hosted in various community venues.</p>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </section>
-
-            <section class="pa2 pv3 pa4-ns pv5-ns bt bg-lightest-blue b--light-gray">
-
-                <div class="c-mw center">
-
                     <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="http://www.suffolkmind.org.uk " class="dark-blue no-underline hover-dark-red">Suffolk Mind</a></h2>
 
                     <div class="dt-l w-100-l">
@@ -150,13 +123,43 @@
 
             </section>
 
+            <section class="pa2 pv3 pa4-ns pv5-ns bt bg-lightest-blue b--light-gray">
+
+                <div class="c-mw center">
+
+                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://suffolkfamilycarers.org/" class="dark-blue no-underline hover-dark-red">Suffolk Family Carers</a></h2>
+
+                    <div class="dt-l w-100-l">
+
+                        <div class="dtc-l w-third-l v-top pr3-l">
+
+                            <p class="tc"><img src="images/suffolk-family-carers.png" alt="Suffolk Family Carers"></p>
+
+                        </div>
+
+                        <div class="dtc-l w-two-thirds-l v-top pl3-l">
+
+                            <p>Suffolk Family Carers provides information, advice and support to thousands of family carers. Their credible representation of family carers’ needs and valued work in supporting family carers enables them to campaign on issues that affect family carers to ensure their voice is heard.
+
+                            <p>Suffolk Family Carers have two dedicated IAGES workers, who cover the county and are responsible for signposting carers and can provide 1:1 sessions for advice and emotional support.</p>
+
+                            <p>The IAGES workers will also support the development and facilitation of Family Carers Open Space groups, which will run with a similar structure to Open Space and be hosted in various community venues.</p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
             <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray">
 
                 <div class="measure center">
 
                     <h2 class="mt0 f5 ttu tracked lh-title tc">Background</h1>
 
-                    <p>During the first six-months of the project, the partnership worked through an implementation phase to help insure the new service would be built with feedback and input from a wide variety of people. The implementation phase consisted of the following:</p>
+                    <p>During the first six-months of the project, the partnership worked through an implementation phase to help ensure the new service would be built with feedback and input from a wide variety of people. The implementation phase consisted of the following:</p>
 
                     <ul>
 
@@ -175,6 +178,37 @@
 
             </section>
 
+            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray bg-near-black light-gray">
+
+                <div class="measure center">
+
+                    <h2 id="contact" class="mt0 f5 ttu tracked lh-title tc">Contact us</h1>
+
+                    <form netlify name="contact" action="/confirmation/" netlify-honeypot="bot-field">
+
+                        <fieldset class="b--dark-gray mb2">
+
+                            <label class="f5 mt2 db">Your name <span class="red">*</span></label>
+                            <input type="text" required name="name" class="pa1 border-box w-100 mb2">
+
+                            <label class="f5 mt2 db">Your email <span class="red">*</span></label>
+                            <input type="email" required name="email" class="pa1 border-box w-100 mb2">
+
+                            <label class="f5 mt2 db">Your feedback <span class="red">*</span></label>
+                            <textarea name="message" required class="pa1 border-box w-100 mb2"></textarea>
+
+                        </fieldset>
+
+                        <p class="dn"><input name="bot-field"></p>
+
+                        <button type="submit" class="input-reset button-reset::-moz-focus-inner .input-reset::-moz-focus-inner pa2 bg-dark-blue white br2 hover-bg-blue pointer b--gray">Send your message</button>
+
+                    </form>
+
+                </div>
+
+            </section>
+
         </article>
 
         <script>
@@ -187,6 +221,22 @@
         h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
         })(document);
         </script>
+        <script>
+        $(function() {
+        $('a[href*=#]:not([href=#])').click(function() {
+        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+        var target = $(this.hash);
+        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+        if (target.length) {
+        $('html,body').animate({
+        scrollTop: target.offset().top
+        }, 1000);
+        return false;
+        }
+        }
+        });
+        });
+		</script>
 
     </body>
 
