--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 
     <head>
 
-        <title>iages</title>
+        <title>IAGES</title>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="noindex, nofollow">
+        <meta name="description" content="A partnership between Suffolk Libraries, Suffolk Family Carers and Suffolk Mind, making information and support more visible and to help people better understand their wellbeing.">
 
         <link href="style.css" rel="stylesheet">
 
@@ -31,7 +32,7 @@
 
     </head>
 
-    <body class="c-sans ma0 pa0 bg-white dark-gray lh-copy c-scroll">
+    <body class="c-sans ma0 pa0 bg-white dark-gray lh-copy c-scroll" id="top">
 
         <article>
 
@@ -43,7 +44,7 @@
 
                     <p class="tc b f4 f2-ns c-hyphens">Introducing the IAGES project (Information, Advice, Guidance and Emotional Support), a new mental health resource for Suffolk.</p>
 
-                    <p class="tc"><a href="#contact" class="b--washed-yellow db di-ns mb3 mb0-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Contact us</a> <a href="#contact" class="b--washed-yellow db di-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Implementation phase info (PDF)</a></p>
+                    <p class="tc"><a href="#contact" class="b--washed-yellow db di-ns mb3 mb0-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Contact us</a> <a href="assets/iages-implementation-summary-dec-2017.pdf" class="b--washed-yellow db di-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Implementation phase info (<abbr title="Portable Document Format">PDF</abbr>, 372kb)</a></p>
 
                 </div>
 
@@ -81,7 +82,7 @@
 
                             <p>New Chapters is the Suffolk Libraries Mental Health and Wellbeing Information Service. Its aim is to provide information on local services and to promote events in libraries and the community that can support mental health and wellbeing.</p>
 
-                            <p>Suffolk Libraries will also increase access to information and signposting across the county, using its buildings, staff and resources; this will include increasing access to books on wellbeing topics, large print and audio books, as well as it’s display areas.</p>
+                            <p>Suffolk Libraries will also increase access to information and signposting across the county, using its buildings, staff and resources; this will include increasing access to books on wellbeing topics, large print and audio books, as well as its display areas.</p>
 
                             </p>The Open Space group (a drop-in session run with the local mental health trust NSFT and Julian Support) will be rolled out across the county in the main libraries. Libraries will also hold regular information events working in partnership with local community organisations and staff will receive training in mental health awareness to help support them in signposting customers.</p>
 
@@ -170,7 +171,7 @@
 
                     </ul>
 
-                    <p>For further information about what IAGES have done so far, please see the Implementation Phase Summary (PDF) (a more detailed evaluation report will be released in the near future) and the partnership will be launching a new website, designed on feedback gathered.</p>
+                    <p>For further information about what IAGES have done so far, please see the <a href="assets/iages-implementation-summary-dec-2017.pdf" class="dark-blue hover-dark-red">Implementation Phase Summary (<abbr title="Portable Document Format">PDF</abbr>, 372kb)</a> (a more detailed evaluation report will be released in the near future) and the partnership will be launching a new website, designed on feedback gathered.</p>
 
                     <p>If you have any questions in the meantime, please complete the contact form and someone will get back to you.</p>
 
@@ -186,24 +187,26 @@
 
                     <form netlify name="contact" action="/confirmation/" netlify-honeypot="bot-field">
 
-                        <fieldset class="b--dark-gray mb2">
+                        <fieldset class="c-sans b--dark-gray mb2">
 
                             <label class="f5 mt2 db">Your name <span class="red">*</span></label>
-                            <input type="text" required name="name" class="pa1 border-box w-100 mb2">
+                            <input type="text" required name="name" class="c-sans pa1 border-box w-100 mb2">
 
                             <label class="f5 mt2 db">Your email <span class="red">*</span></label>
-                            <input type="email" required name="email" class="pa1 border-box w-100 mb2">
+                            <input type="email" required name="email" class="c-sans pa1 border-box w-100 mb2">
 
-                            <label class="f5 mt2 db">Your feedback <span class="red">*</span></label>
-                            <textarea name="message" required class="pa1 border-box w-100 mb2"></textarea>
+                            <label class="f5 mt2 db">Your message <span class="red">*</span></label>
+                            <textarea name="message" required class="c-sans pa1 border-box w-100 mb2"></textarea>
 
                         </fieldset>
 
                         <p class="dn"><input name="bot-field"></p>
 
-                        <button type="submit" class="input-reset button-reset::-moz-focus-inner .input-reset::-moz-focus-inner pa2 bg-dark-blue white br2 hover-bg-blue pointer b--gray">Send your message</button>
+                        <button type="submit" class="c-sans input-reset button-reset::-moz-focus-inner .input-reset::-moz-focus-inner pa2 bg-dark-blue white br2 hover-bg-blue pointer b--gray">Send your message</button>
 
                     </form>
+
+                    <p class="tc"><a href="#top" class="lightest-blue no-underline bb b--lightest-blue hover-white">To the top &uarr;</a></p>
 
                 </div>
 
