Fixed an IE 11 2/3 width bug, added confirmation page

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
                     <div class="dt-l w-100-l">
 
-                        <div class="dtc-l w-third-l v-top pr3-l">
+                        <div class="dtc-l w-30-l v-top pr3-l">
 
-                            <p class="tc"><img src="images/new-chapters-logo.png" alt="New Chapters"></p>
+                            <p class="tc"><a href="https://www.suffolklibraries.co.uk/health/"><img src="images/new-chapters-logo.png" alt="New Chapters"></a></p>
 
                         </div>
 
-                        <div class="dtc-l w-two-thirds-l v-top pl3-l">
+                        <div class="dtc-l w-70-l v-top pl3-l">
 
                             <p>New Chapters is the Suffolk Libraries Mental Health and Wellbeing Information Service. Its aim is to provide information on local services and to promote events in libraries and the community that can support mental health and wellbeing.</p>
 
@@ -98,17 +98,17 @@
 
                 <div class="c-mw center">
 
-                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="http://www.suffolkmind.org.uk " class="dark-blue no-underline hover-dark-red">Suffolk Mind</a></h2>
+                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="http://www.suffolkmind.org.uk" class="dark-blue no-underline hover-dark-red">Suffolk Mind</a></h2>
 
                     <div class="dt-l w-100-l">
 
-                        <div class="dtc-l w-third-l v-top pr3-l">
+                        <div class="dtc-l w-30-l v-top pr3-l">
 
-                            <p class="tc"><img src="images/suffolkmind_orig.png" alt="Suffolk Mind"></p>
+                            <p class="tc"><a href="http://www.suffolkmind.org.uk"><img src="images/suffolkmind_orig.png" alt="Suffolk Mind"></a></p>
 
                         </div>
 
-                        <div class="dtc-l w-two-thirds-l v-top pl3-l">
+                        <div class="dtc-l w-70-l v-top pl3-l">
 
                             <p>Suffolk Mind is affiliated to the national charity Mind, and is known as a local Mind, delivering services to reflect the needs of people in Suffolk. Suffolk Mind is committed to improving the lives of people with mental health issues.</p>
 
@@ -132,13 +132,13 @@
 
                     <div class="dt-l w-100-l">
 
-                        <div class="dtc-l w-third-l v-top pr3-l">
+                        <div class="dtc-l w-30-l v-top pr3-l">
 
-                            <p class="tc"><img src="images/suffolk-family-carers.png" alt="Suffolk Family Carers"></p>
+                            <p class="tc"><a href="https://suffolkfamilycarers.org/"><img src="images/suffolk-family-carers.png" alt="Suffolk Family Carers"></a></p>
 
                         </div>
 
-                        <div class="dtc-l w-two-thirds-l v-top pl3-l">
+                        <div class="dtc-l w-70-l v-top pl3-l">
 
                             <p>Suffolk Family Carers provides information, advice and support to thousands of family carers. Their credible representation of family carers’ needs and valued work in supporting family carers enables them to campaign on issues that affect family carers to ensure their voice is heard.
 
@@ -185,7 +185,7 @@
 
                     <h2 id="contact" class="mt0 f5 ttu tracked lh-title tc">Contact us</h1>
 
-                    <form netlify name="contact" action="/confirmation/" netlify-honeypot="bot-field">
+                    <form netlify name="contact" action="confirmation.html" netlify-honeypot="bot-field">
 
                         <fieldset class="c-sans b--dark-gray mb2">
 
@@ -224,22 +224,6 @@
         h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
         })(document);
         </script>
-        <script>
-        $(function() {
-        $('a[href*=#]:not([href=#])').click(function() {
-        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-        var target = $(this.hash);
-        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-        if (target.length) {
-        $('html,body').animate({
-        scrollTop: target.offset().top
-        }, 1000);
-        return false;
-        }
-        }
-        });
-        });
-		</script>
 
     </body>
 
