--- a/confirmation.html
+++ b/confirmation.html
@@ -44,7 +44,7 @@
 
                     <p class="tc b f4 f2-ns c-hyphens">Thanks for contacting us. We'll get back as soon as possible.</p>
 
-                    <p class="tc"><a href="#contact" class="b--washed-yellow db di-ns mb3 mb0-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Back to the home page &rarr;</a></p>
+                    <p class="tc"><a href="/" class="b--washed-yellow db di-ns mb3 mb0-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Back to the home page &rarr;</a></p>
 
                 </div>
 
@@ -62,7 +62,7 @@
         h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
         })(document);
         </script>
-        
+
     </body>
 
 </html>
