Removed display table due to stoopid IE11 bug

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 
                     <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://www.suffolklibraries.co.uk/health/" class="dark-blue no-underline hover-dark-red">New Chapters</a></h2>
 
-                    <div class="dt-l w-100-l">
+                    <div class="cf">
 
-                        <div class="dtc-l w-30-l v-top pr3-l">
+                        <div class="fl-l w-30-l pr3-l">
 
                             <p class="tc"><a href="https://www.suffolklibraries.co.uk/health/"><img src="images/new-chapters-logo.png" alt="New Chapters"></a></p>
 
                         </div>
 
-                        <div class="dtc-l w-70-l v-top pl3-l">
+                        <div class="fl-l w-70-l pl3-l">
 
                             <p>New Chapters is the Suffolk Libraries Mental Health and Wellbeing Information Service. Its aim is to provide information on local services and to promote events in libraries and the community that can support mental health and wellbeing.</p>
 
@@ -100,15 +100,15 @@
 
                     <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="http://www.suffolkmind.org.uk" class="dark-blue no-underline hover-dark-red">Suffolk Mind</a></h2>
 
-                    <div class="dt-l w-100-l">
+                    <div class="cf">
 
-                        <div class="dtc-l w-30-l v-top pr3-l">
+                        <div class="fl-l w-30-l pr3-l">
 
                             <p class="tc"><a href="http://www.suffolkmind.org.uk"><img src="images/suffolkmind_orig.png" alt="Suffolk Mind"></a></p>
 
                         </div>
 
-                        <div class="dtc-l w-70-l v-top pl3-l">
+                        <div class="fl-l w-70-l pl3-l">
 
                             <p>Suffolk Mind is affiliated to the national charity Mind, and is known as a local Mind, delivering services to reflect the needs of people in Suffolk. Suffolk Mind is committed to improving the lives of people with mental health issues.</p>
 
@@ -130,15 +130,15 @@
 
                     <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://suffolkfamilycarers.org/" class="dark-blue no-underline hover-dark-red">Suffolk Family Carers</a></h2>
 
-                    <div class="dt-l w-100-l">
+                    <div class="cf">
 
-                        <div class="dtc-l w-30-l v-top pr3-l">
+                        <div class="fl-l w-30-l pr3-l">
 
                             <p class="tc"><a href="https://suffolkfamilycarers.org/"><img src="images/suffolk-family-carers.png" alt="Suffolk Family Carers"></a></p>
 
                         </div>
 
-                        <div class="dtc-l w-70-l v-top pl3-l">
+                        <div class="fl-l w-70-l pl3-l">
 
                             <p>Suffolk Family Carers provides information, advice and support to thousands of family carers. Their credible representation of family carers’ needs and valued work in supporting family carers enables them to campaign on issues that affect family carers to ensure their voice is heard.
 
