Minified head CSS and tidied opening description

--- a/index.html
+++ b/index.html
@@ -13,22 +13,7 @@
 
         <link href="style.css" rel="stylesheet">
 
-        <style>
-            .c-sans {
-                font-family: skolar-sans-latin,-apple-system,BlinkMacSystemFont,"segoe ui","helvetica neue",helvetica,ubuntu,roboto,noto,sans-serif;
-            }
-            .c-mw {
-                max-width: 40em;
-            }
-            .c-hyphens {
-                -webkit-hyphens: auto;
-                -moz-hyphens: auto;
-                hyphens: auto;
-            }
-            .c-scroll {
-                scroll-behavior: smooth;
-            }
-        </style>
+        <style>.c-sans{font-family:skolar-sans-latin,-apple-system,BlinkMacSystemFont,"segoe ui","helvetica neue",helvetica,ubuntu,roboto,noto,sans-serif}.c-mw{max-width:40em}.c-hyphens{-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto}.c-scroll{scroll-behavior:smooth}</style>
 
     </head>
 
@@ -56,7 +41,7 @@
 
                     <h2 class="mt0 f5 ttu tracked lh-title tc">About</h1>
 
-                    <p>IAGES is a partnership between <strong>Suffolk Libraries</strong>, <strong>Suffolk Family Carers</strong> and <strong>Suffolk Mind</strong>. Each partner is responsible for delivering its own core part of the service and are dedicated to working towards making information and support more visible and to help people better understand their wellbeing.</p>
+                    <p>IAGES is a partnership between <strong>Suffolk Libraries</strong>, <strong>Suffolk Family Carers</strong> and <strong>Suffolk Mind</strong>. Each partner delivers its own part of the service, making information and support more visible and helping people better understand their wellbeing.</p>
 
                     <p>The partnership has been funded by the <strong>Mental Health Pooled Fund from Suffolk’s Clinical Commissioning Groups and Suffolk County Council</strong>.</p>
 
