Fixed validation errors

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
         <link href="style.css" rel="stylesheet">
 
-        <style>.c-sans{font-family:skolar-sans-latin,-apple-system,BlinkMacSystemFont,"segoe ui","helvetica neue",helvetica,ubuntu,roboto,noto,sans-serif}.c-mw{max-width:40em}.c-hyphens{-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto}.c-scroll{scroll-behavior:smooth}</style>
+        <style>.c-sans{font-family:skolar-sans-latin,-apple-system,BlinkMacSystemFont,"segoe ui","helvetica neue",helvetica,ubuntu,roboto,noto,sans-serif}.c-mw{max-width:40em}.c-hyphens{-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto}</style>
 
     </head>
 
-    <body class="c-sans ma0 pa0 bg-white dark-gray lh-copy c-scroll" id="top">
+    <body class="c-sans ma0 pa0 bg-white dark-gray lh-copy" id="top">
 
         <article>
 
@@ -39,7 +39,7 @@
 
                 <div class="measure center">
 
-                    <h2 class="mt0 f5 ttu tracked lh-title tc">About</h1>
+                    <h2 class="mt0 f5 ttu tracked lh-title tc">About</h2>
 
                     <p>IAGES is a partnership between <strong>Suffolk Libraries</strong>, <strong>Suffolk Family Carers</strong> and <strong>Suffolk Mind</strong>. Each partner delivers its own part of the service, making information and support more visible and helping people better understand their wellbeing.</p>
 
@@ -69,7 +69,7 @@
 
                             <p>Suffolk Libraries will also increase access to information and signposting across the county, using its buildings, staff and resources; this will include increasing access to books on wellbeing topics, large print and audio books, as well as its display areas.</p>
 
-                            </p>The Open Space group (a drop-in session run with the local mental health trust NSFT and Julian Support) will be rolled out across the county in the main libraries. Libraries will also hold regular information events working in partnership with local community organisations and staff will receive training in mental health awareness to help support them in signposting customers.</p>
+                            <p>The Open Space group (a drop-in session run with the local mental health trust NSFT and Julian Support) will be rolled out across the county in the main libraries. Libraries will also hold regular information events working in partnership with local community organisations and staff will receive training in mental health awareness to help support them in signposting customers.</p>
 
                         </div>
 
@@ -143,7 +143,7 @@
 
                 <div class="measure center">
 
-                    <h2 class="mt0 f5 ttu tracked lh-title tc">Background</h1>
+                    <h2 class="mt0 f5 ttu tracked lh-title tc">Background</h2>
 
                     <p>During the first six-months of the project, the partnership worked through an implementation phase to help ensure the new service would be built with feedback and input from a wide variety of people. The implementation phase consisted of the following:</p>
 
@@ -168,7 +168,7 @@
 
                 <div class="measure center">
 
-                    <h2 id="contact" class="mt0 f5 ttu tracked lh-title tc">Contact us</h1>
+                    <h2 id="contact" class="mt0 f5 ttu tracked lh-title tc">Contact us</h2>
 
                     <form netlify name="contact" action="confirmation.html" netlify-honeypot="bot-field">
 
