Added some head meta

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A partnership between Suffolk Libraries, Suffolk Family Carers and Suffolk Mind, making information and support more visible and to help people better understand their wellbeing.">
+        <meta name="author" content="Leon Paternoster">
+        <meta name="reply-to" content="leon.paternoster@suffolklibraries.co.uk">
 
         <link href="style.css" rel="stylesheet">
 
