--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en" class="f4">
+<html lang="en">
 
     <head>
 
@@ -14,7 +14,7 @@
 
         <link href="style.css" rel="stylesheet">
 
-        <style>.c-sans{font-family:skolar-sans-latin,-apple-system,BlinkMacSystemFont,"segoe ui","helvetica neue",helvetica,ubuntu,roboto,noto,sans-serif}.c-mw{max-width:40em}.c-hyphens{-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto}</style>
+        <style>html{font-size:118.75%;}.c-sans{font-family:avenir,-apple-system,BlinkMacSystemFont,"segoe ui","helvetica neue",helvetica,ubuntu,roboto,noto,sans-serif}.c-mw{max-width:40em}.c-hyphens{-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto}</style>
 
     </head>
 
@@ -28,9 +28,9 @@
 
                 <div class="c-mw center">
 
-                    <p class="tc b f4 f2-ns c-hyphens">Introducing the IAGES project (Information, Advice, Guidance and Emotional Support), a new mental health resource for Suffolk.</p>
+                    <p class="tc b f4 f2-ns">Introducing the IAGES project (Information, Advice, Guidance and Emotional Support), a new mental health resource for Suffolk.</p>
 
-                    <p class="tc"><a href="#contact" class="b--washed-yellow db di-ns mb3 mb0-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Contact us</a> <a href="assets/iages-implementation-summary-dec-2017.pdf" class="b--washed-yellow db di-ns no-underline pa2 bg-blue hover-bg-dark-red white br2">Implementation phase info (<abbr title="Portable Document Format">PDF</abbr>, 372kb)</a></p>
+                    <p class="tc"><a href="#contact" class="b--washed-yellow db di-l mb3 mb0-l no-underline pa2 bg-blue hover-bg-dark-red white br2">Contact us</a> <a href="assets/iages-implementation-summary-dec-2017.pdf" class="f6 db di-ns pa2 dark-blue hover-dark-red">Implementation phase info (<abbr title="Portable Document Format">PDF</abbr>, 372kb)</a></p>
 
                 </div>
 
@@ -66,11 +66,11 @@
 
                         <div class="fl-l w-70-l pl3-l">
 
-                            <p>New Chapters is the Suffolk Libraries Mental Health and Wellbeing Information Service. Its aim is to provide information on local services and to promote events in libraries and the community that can support mental health and wellbeing.</p>
+                            <p>New Chapters is the Suffolk Libraries Mental Health and Wellbeing Information Service. It provides information on local services and promotes events in libraries and the community that support mental health and wellbeing.</p>
 
-                            <p>Suffolk Libraries will also increase access to information and signposting across the county, using its buildings, staff and resources; this will include increasing access to books on wellbeing topics, large print and audio books, as well as its display areas.</p>
+                            <p>Suffolk Libraries will increase access to information and signposting across the county, using its buildings, staff and resources. This will include access to books on wellbeing, large print and audio books, as well as its display areas.</p>
 
-                            <p>The Open Space group (a drop-in session run with the local mental health trust NSFT and Julian Support) will be rolled out across the county in the main libraries. Libraries will also hold regular information events working in partnership with local community organisations and staff will receive training in mental health awareness to help support them in signposting customers.</p>
+                            <p>The Open Space group (a drop-in session run with the local mental health trust NSFT and Julian Support) will be rolled out across the county in the main libraries. Libraries will also hold regular information events working in partnership with local community organisations, and staff will receive training in mental health awareness to help them signpost customers.</p>
 
                         </div>
 
@@ -199,17 +199,6 @@
             </section>
 
         </article>
-
-        <script>
-        (function(d) {
-        var config = {
-          kitId: 'phk8vgh',
-          scriptTimeout: 3000,
-          async: true
-        },
-        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-        })(document);
-        </script>
 
     </body>
 
