--- a/index.html
+++ b/index.html
@@ -36,167 +36,171 @@
 
             </header>
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bg-white bt b--light-gray">
+            <div class="c-hyphens">
 
-                <div class="measure center">
+                <section class="pa2 pv4 pa4-ns pv5-ns bg-white bt b--light-gray">
 
-                    <h2 class="mt0 f5 ttu tracked lh-title tc">About</h2>
+                    <div class="measure center">
 
-                    <p>IAGES is a partnership between <strong>Suffolk Libraries</strong>, <strong>Suffolk Family Carers</strong> and <strong>Suffolk Mind</strong>. Each partner delivers its own part of the service, making information and support more visible and helping people better understand their wellbeing.</p>
+                        <h2 class="mt0 f5 ttu tracked lh-title tc">About</h2>
 
-                    <p>The partnership has been funded by the <strong>Mental Health Pooled Fund from Suffolk’s Clinical Commissioning Groups and Suffolk County Council</strong>.</p>
+                        <p>IAGES is a partnership between <strong>Suffolk Libraries</strong>, <strong>Suffolk Family Carers</strong> and <strong>Suffolk Mind</strong>. Each partner delivers its own part of the service, making information and support more visible and helping people better understand their wellbeing.</p>
 
-                </div>
+                        <p>The partnership has been funded by the <strong>Mental Health Pooled Fund from Suffolk’s Clinical Commissioning Groups and Suffolk County Council</strong>.</p>
 
-            </section>
+                    </div>
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bt bg-lightest-blue b--light-gray">
+                </section>
 
-                <div class="c-mw center">
+                <section class="pa2 pv4 pa4-ns pv5-ns bt bg-lightest-blue b--light-gray">
 
-                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://www.suffolklibraries.co.uk/health/" class="dark-blue no-underline hover-dark-red">New Chapters</a></h2>
+                    <div class="c-mw center">
 
-                    <div class="cf">
+                        <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://www.suffolklibraries.co.uk/health/" class="dark-blue no-underline hover-dark-red">New Chapters</a></h2>
 
-                        <div class="fl-l w-30-l pr3-l">
+                        <div class="cf">
 
-                            <p class="tc"><a href="https://www.suffolklibraries.co.uk/health/"><img src="images/new-chapters-logo.png" alt="New Chapters"></a></p>
+                            <div class="fl-l w-30-l pr3-l">
 
-                        </div>
+                                <p class="tc"><a href="https://www.suffolklibraries.co.uk/health/"><img src="images/new-chapters-logo.png" alt="New Chapters"></a></p>
 
-                        <div class="fl-l w-70-l pl3-l">
+                            </div>
 
-                            <p>New Chapters is the Suffolk Libraries Mental Health and Wellbeing Information Service. It provides information on local services and promotes events in libraries and the community that support mental health and wellbeing.</p>
+                            <div class="fl-l w-70-l pl3-l">
 
-                            <p>Suffolk Libraries will increase access to information and signposting across the county, using its buildings, staff and resources. This will include access to books on wellbeing, large print and audio books, as well as its display areas.</p>
+                                <p>New Chapters is the Suffolk Libraries Mental Health and Wellbeing Information Service. It provides information on local services and promotes events in libraries and the community that support mental health and wellbeing.</p>
 
-                            <p>The Open Space group (a drop-in session run with the local mental health trust NSFT and Julian Support) will be rolled out across the county in the main libraries. Libraries will also hold regular information events working in partnership with local community organisations, and staff will receive training in mental health awareness to help them signpost customers.</p>
+                                <p>Suffolk Libraries will increase access to information and signposting across the county, using its buildings, staff and resources. This will include access to books on wellbeing, large print and audio books, as well as its display areas.</p>
+
+                                <p>The Open Space group (a drop-in session run with the local mental health trust NSFT and Julian Support) will be rolled out across the county in the main libraries. Libraries will also hold regular information events working in partnership with local community organisations, and staff will receive training in mental health awareness to help them signpost customers.</p>
+
+                            </div>
 
                         </div>
 
                     </div>
 
-                </div>
+                </section>
 
-            </section>
+                <section class="pa2 pv4 pa4-ns pv5-ns bt b--light-gray">
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray">
+                    <div class="c-mw center">
 
-                <div class="c-mw center">
+                        <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="http://www.suffolkmind.org.uk" class="dark-blue no-underline hover-dark-red">Suffolk Mind</a></h2>
 
-                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="http://www.suffolkmind.org.uk" class="dark-blue no-underline hover-dark-red">Suffolk Mind</a></h2>
+                        <div class="cf">
 
-                    <div class="cf">
+                            <div class="fl-l w-30-l pr3-l">
 
-                        <div class="fl-l w-30-l pr3-l">
+                                <p class="tc"><a href="http://www.suffolkmind.org.uk"><img src="images/suffolkmind_orig.png" alt="Suffolk Mind"></a></p>
 
-                            <p class="tc"><a href="http://www.suffolkmind.org.uk"><img src="images/suffolkmind_orig.png" alt="Suffolk Mind"></a></p>
+                            </div>
 
-                        </div>
+                            <div class="fl-l w-70-l pl3-l">
 
-                        <div class="fl-l w-70-l pl3-l">
+                                <p>Suffolk Mind is affiliated to the national charity Mind, and is known as a local Mind, delivering services to reflect the needs of people in Suffolk. Suffolk Mind is committed to improving the lives of people with mental health issues.</p>
 
-                            <p>Suffolk Mind is affiliated to the national charity Mind, and is known as a local Mind, delivering services to reflect the needs of people in Suffolk. Suffolk Mind is committed to improving the lives of people with mental health issues.</p>
+                                <p>Suffolk Mind will be recruiting Peer Mentor Volunteers, who will be provided with training, supervision and managed by a volunteer coordinator within the organisation.</p>
 
-                            <p>Suffolk Mind will be recruiting Peer Mentor Volunteers, who will be provided with training, supervision and managed by a volunteer coordinator within the organisation.</p>
+                                <p>The volunteers will support the development of peer groups, as well as the Family Carer/ Open Space groups within the community and will work with partnership organisations to support signposting and information.</p>
 
-                            <p>The volunteers will support the development of peer groups, as well as the Family Carer/ Open Space groups within the community and will work with partnership organisations to support signposting and information.</p>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </section>
-
-            <section class="pa2 pv3 pa4-ns pv5-ns bt bg-lightest-blue b--light-gray">
-
-                <div class="c-mw center">
-
-                    <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://suffolkfamilycarers.org/" class="dark-blue no-underline hover-dark-red">Suffolk Family Carers</a></h2>
-
-                    <div class="cf">
-
-                        <div class="fl-l w-30-l pr3-l">
-
-                            <p class="tc"><a href="https://suffolkfamilycarers.org/"><img src="images/suffolk-family-carers.png" alt="Suffolk Family Carers"></a></p>
-
-                        </div>
-
-                        <div class="fl-l w-70-l pl3-l">
-
-                            <p>Suffolk Family Carers provides information, advice and support to thousands of family carers. Their credible representation of family carers’ needs and valued work in supporting family carers enables them to campaign on issues that affect family carers to ensure their voice is heard.
-
-                            <p>Suffolk Family Carers have two dedicated IAGES workers, who cover the county and are responsible for signposting carers and can provide 1:1 sessions for advice and emotional support.</p>
-
-                            <p>The IAGES workers will also support the development and facilitation of Family Carers Open Space groups, which will run with a similar structure to Open Space and be hosted in various community venues.</p>
+                            </div>
 
                         </div>
 
                     </div>
 
-                </div>
+                </section>
 
-            </section>
+                <section class="pa2 pv4 pa4-ns pv5-ns bt bg-lightest-blue b--light-gray">
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray">
+                    <div class="c-mw center">
 
-                <div class="measure center">
+                        <h2 class="mt0 f5 ttu tracked lh-title tc"><a href="https://suffolkfamilycarers.org/" class="dark-blue no-underline hover-dark-red">Suffolk Family Carers</a></h2>
 
-                    <h2 class="mt0 f5 ttu tracked lh-title tc">Background</h2>
+                        <div class="cf">
 
-                    <p>During the first six-months of the project, the partnership worked through an implementation phase to help ensure the new service would be built with feedback and input from a wide variety of people. The implementation phase consisted of the following:</p>
+                            <div class="fl-l w-30-l pr3-l">
 
-                    <ul>
+                                <p class="tc"><a href="https://suffolkfamilycarers.org/"><img src="images/suffolk-family-carers.png" alt="Suffolk Family Carers"></a></p>
 
-                        <li>Raising awareness of the new partnership and its aims</li>
-                        <li>Gathering feedback from service users, staff and anyone interested in wellbeing to help shape the new service</li>
-                        <li>Developing, improving and gathering feedback about our existing services</li>
-                        <li>Establishing our next steps</li>
+                            </div>
 
-                    </ul>
+                            <div class="fl-l w-70-l pl3-l">
 
-                    <p>For further information about what IAGES have done so far, please see the <a href="assets/iages-implementation-summary-dec-2017.pdf" class="dark-blue hover-dark-red">Implementation Phase Summary (<abbr title="Portable Document Format">PDF</abbr>, 372kb)</a> (a more detailed evaluation report will be released in the near future) and the partnership will be launching a new website, designed on feedback gathered.</p>
+                                <p>Suffolk Family Carers provides information, advice and support to thousands of family carers. Their credible representation of family carers’ needs and valued work in supporting family carers enables them to campaign on issues that affect family carers to ensure their voice is heard.
 
-                    <p>If you have any questions in the meantime, please complete the contact form and someone will get back to you.</p>
+                                <p>Suffolk Family Carers have two dedicated IAGES workers, who cover the county and are responsible for signposting carers and can provide 1:1 sessions for advice and emotional support.</p>
 
-                </div>
+                                <p>The IAGES workers will also support the development and facilitation of Family Carers Open Space groups, which will run with a similar structure to Open Space and be hosted in various community venues.</p>
 
-            </section>
+                            </div>
 
-            <section class="pa2 pv3 pa4-ns pv5-ns bt b--light-gray bg-near-black light-gray">
+                        </div>
 
-                <div class="measure center">
+                    </div>
 
-                    <h2 id="contact" class="mt0 f5 ttu tracked lh-title tc">Contact us</h2>
+                </section>
 
-                    <form netlify name="contact" action="confirmation.html" netlify-honeypot="bot-field">
+                <section class="pa2 pv4 pa4-ns pv5-ns bt b--light-gray">
 
-                        <fieldset class="c-sans b--dark-gray mb2">
+                    <div class="measure center">
 
-                            <label class="f5 mt2 db">Your name <span class="red">*</span></label>
-                            <input type="text" required name="name" class="c-sans pa1 border-box w-100 mb2">
+                        <h2 class="mt0 f5 ttu tracked lh-title tc">Background</h2>
 
-                            <label class="f5 mt2 db">Your email <span class="red">*</span></label>
-                            <input type="email" required name="email" class="c-sans pa1 border-box w-100 mb2">
+                        <p>During the first six-months of the project, the partnership worked through an implementation phase to help ensure the new service would be built with feedback and input from a wide variety of people. The implementation phase consisted of the following:</p>
 
-                            <label class="f5 mt2 db">Your message <span class="red">*</span></label>
-                            <textarea name="message" required class="c-sans pa1 border-box w-100 mb2"></textarea>
+                        <ul>
 
-                        </fieldset>
+                            <li>Raising awareness of the new partnership and its aims</li>
+                            <li>Gathering feedback from service users, staff and anyone interested in wellbeing to help shape the new service</li>
+                            <li>Developing, improving and gathering feedback about our existing services</li>
+                            <li>Establishing our next steps</li>
 
-                        <p class="dn"><input name="bot-field"></p>
+                        </ul>
 
-                        <button type="submit" class="c-sans input-reset button-reset::-moz-focus-inner .input-reset::-moz-focus-inner pa2 bg-dark-blue white br2 hover-bg-blue pointer b--gray">Send your message</button>
+                        <p>For further information about what IAGES have done so far, please see the <a href="assets/iages-implementation-summary-dec-2017.pdf" class="dark-blue hover-dark-red">Implementation Phase Summary (<abbr title="Portable Document Format">PDF</abbr>, 372kb)</a> (a more detailed evaluation report will be released in the near future) and the partnership will be launching a new website, designed on feedback gathered.</p>
 
-                    </form>
+                        <p>If you have any questions in the meantime, please complete the contact form and someone will get back to you.</p>
 
-                    <p class="tc"><a href="#top" class="lightest-blue no-underline bb b--lightest-blue hover-white">To the top &uarr;</a></p>
+                    </div>
 
-                </div>
+                </section>
 
-            </section>
+                <section class="pa2 pv4 pa4-ns pv5-ns bt b--light-gray bg-near-black light-gray">
+
+                    <div class="measure center">
+
+                        <h2 id="contact" class="mt0 f5 ttu tracked lh-title tc">Contact us</h2>
+
+                        <form netlify name="contact" action="confirmation.html" netlify-honeypot="bot-field">
+
+                            <fieldset class="c-sans b--dark-gray mb2">
+
+                                <label class="f5 mt2 db">Your name <span class="red">*</span></label>
+                                <input type="text" required name="name" class="c-sans pa1 border-box w-100 mb2">
+
+                                <label class="f5 mt2 db">Your email <span class="red">*</span></label>
+                                <input type="email" required name="email" class="c-sans pa1 border-box w-100 mb2">
+
+                                <label class="f5 mt2 db">Your message <span class="red">*</span></label>
+                                <textarea name="message" required class="c-sans pa1 border-box w-100 mb2"></textarea>
+
+                            </fieldset>
+
+                            <p class="dn"><input name="bot-field"></p>
+
+                            <button type="submit" class="c-sans input-reset button-reset::-moz-focus-inner .input-reset::-moz-focus-inner pa2 bg-dark-blue white br2 hover-bg-blue pointer b--gray">Send your message</button>
+
+                        </form>
+
+                        <p class="tc"><a href="#top" class="lightest-blue no-underline bb b--lightest-blue hover-white">To the top &uarr;</a></p>
+
+                    </div>
+
+                </section>
+
+            </div>
 
         </article>
 
