Added border bottom to title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <header class="pa2 pb3 pa4-ns pb5-ns bg-lightest-blue">
 
-                <h1 class="normal mt0 f5 f4-ns ttu tracked lh-title tc">IAGES</h1>
+                <h1 class="normal mt0 pb2 bb b--washed-blue f5 f4-ns ttu tracked lh-title tc">IAGES</h1>
 
                 <div class="c-mw center">
 
